Fixing alignment

--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@ hr {
   padding: 0 20px 0 20px;
   margin-top: 10px;
 }
+.info-text {
+  padding: 0 100px;
+}
 .button-title {
   color: #eef0e5;
   font-family: "Montserrat", sans-serif;
@@ -110,9 +113,7 @@ a {
 .project-images {
   border: 8px solid black;
 }
-.info-text {
-  width: 50%;
-}
+
 .button:hover {
   background: #304d30;
   text-decoration: none;
@@ -134,6 +135,10 @@ a {
 }
 
 @media (max-width: 1280px) {
+  .info-text {
+    padding: 0 30px;
+  }
+
   .grid-container {
     grid-template-columns: 1fr;
     text-align: center;
